# jsonschema

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  MIGRATION.md  README.md
.github/workflows/: ci.yml  codspeed.yml  daily.yml  python-release.yml
crates/benchmark/: Cargo.toml
crates/benchmark-suite/: Cargo.toml  README.md
crates/benchmark-suite/benches/: jsonschema.rs  jsonschema_valid.rs  valico.rs
crates/jsonschema/: Cargo.toml
crates/jsonschema-cli/: Cargo.toml
crates/jsonschema-cli/src/: main.rs
crates/jsonschema-cli/tests/: cli.rs
crates/jsonschema-py/: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  rust-toolchain.toml
crates/jsonschema-py/src/: lib.rs  registry.rs  retriever.rs
crates/jsonschema-py/tests-py/: test_jsonschema.py  test_meta.py  test_registry.py
crates/jsonschema-referencing/: Cargo.toml
crates/jsonschema-referencing-testsuite/: Cargo.toml
crates/jsonschema-referencing-testsuite-codegen/: Cargo.toml
crates/jsonschema-referencing-testsuite-internal/: Cargo.toml
crates/jsonschema-referencing/benches/: pointer.rs  registry.rs  subresources.rs
crates/jsonschema-referencing/src/: lib.rs  meta.rs  registry.rs  resource.rs  retriever.rs
crates/jsonschema-testsuite/: Cargo.toml
crates/jsonschema-testsuite-codegen/: Cargo.toml
crates/jsonschema-testsuite-internal/: Cargo.toml
crates/jsonschema/benches/: errors.rs  location.rs
crates/jsonschema/src/: compiler.rs  error.rs  lib.rs  node.rs  options.rs  (+4 more)
crates/testsuite-common/: Cargo.toml
profiler/: Cargo.toml
profiler/src/: main.rs
(+29 files in other folders)
